Update required version of python-igraph in requirements.txt
Also needed a change to `promise` dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ chardet==3.0.4
 gql==0.1.0
 graphql-core<3.0.0
 idna==2.8
-promise==2.2.1
-python-igraph==0.7
+promise~=2.2.1
+python-igraph==0.8.0
 requests==2.22.0
 six==1.13.0
 urllib3==1.25.7
